welcome.lessons.welcome.array.array123.Array123.scala.error
array123:4: error: '(' expected but identifier found.
      if !(nums.length >= i+3) {
         ^array123:14: error: illegal start of simple expression
    }
    ^